[package]
name = "cambrian-rust-sdk"
version = "0.1.0"
edition = "2024"
description = "Rust SDK for building Cambrian payload containers for Actively Validated Services (AVS)"
license = "MIT"
repository = "https://github.com/cambrianone/payload-images"
readme = "README.md"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-program = "1.18.2"
serde_repr = "0.1"